@@ -1,3 +1,6 @@
+Nov 28, 2014 - chris ---------------------------------------------------
+o Fixed large file support on linux (thanks, Thomas Fähnle)
+
 Nov 27, 2014 - chris ---------------------------------------------------
 o Removed dependency to malloc.h
 o issue #42: ham_cursor_find returned wrong key w/ approx. matching and
